# aiophoenixcontactcharx

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
aiophoenixcontactcharx/: __init__.py  client.py  exceptions.py  models.py  registers.py
docs/adr/: 0001-single-controller-scope.md  0002-session-over-charging-process.md
tests/: helpers.py  test_client.py  test_decoding.py
