[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiophoenixcontactcharx"
version = "0.1.2"
description = "Async Python library for Phoenix Contact CHARX SEC EV charging controllers via Modbus/TCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ev", "charger", "phoenix-contact", "charx", "modbus", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "pymodbus>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/klconsultancy/aiophoenixcontactcharx"
Issues = "https://github.com/klconsultancy/aiophoenixcontactcharx/issues"

[tool.hatch.build.targets.wheel]
packages = ["aiophoenixcontactcharx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
